Fix image spacing

--- a/css/main.css
+++ b/css/main.css
@@ -267,13 +267,13 @@ box-shadow: 0px 25px 40px -15px rgba(186 ,196 ,233 ,1);
   .body {
     font-family: 'Work Sans', sans-serif;
     font-weight: 300;
-    font-size: 15px;
-    line-height:30px;
+    font-size: 14px;
+    line-height:28px;
    }
    
    .header {
     font-family: 'Oswald', sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     margin-bottom: 0px;
    }
    
